Corrected typos in Intro, Ch 1, and Ch3 (resulting extracted html files)

--- a/intro.qmd
+++ b/intro.qmd
@@ -70,7 +70,7 @@ Building on Gaunt and Howie, Campbell leverages the wider corpus of the French t
 
 > Mary’s redefined relationship to the social world is one that involves the confirmation of male community rather than its dissolution, the setting of Christian example rather than its corruption. It is a relationship that once again exposes Mary to a male public, *yet in a transformed, strictly disembodied form: the final contact between Mary and her male admirers is ultimately maintained not through her body but through the text of her life. *(164; my emphasis)
 
-When Zozimas discovers the deceased body of Mary the Egyptian — identified for him clearly for the first time thanks to the miraculous note left beside her corpse that reads, “Zozimas, take the body of Mary, / and bury it with God’s help. / When you have buried it, / pray for her by your mercy” (vv.1387-1390)[^27] —, the reader is simultaneously struck in parallel by this experience of revelation, reading the miraculous note through Zozimas’s eyes.[^28] Exposed to the reader thanks to the language of the T-poet, Mary the Egyptian is transmuted; her being has been made interpretable in textual form as a readable corpus in contrast with her former body, which at one time was ‘knowable’ only sexually. Following her burial, Zozimas is ready to unveil her story to others:
+When Zozimas discovers the deceased body of Mary the Egyptian — identified for him clearly for the first time thanks to the miraculous note left beside her corpse that reads, “Zozimas, take the body of Mary, / and bury it with God’s help. / When you have buried it, / pray for her by your mercy” (vv.1387-1390)[^27] — the reader is simultaneously struck in parallel by this experience of revelation, reading the miraculous note through Zozimas’s eyes.[^28] Exposed to the reader thanks to the language of the T-poet, Mary the Egyptian is transmuted; her being has been made interpretable in textual form as a readable corpus in contrast with her former body, which at one time was ‘knowable’ only sexually. Following her burial, Zozimas is ready to unveil her story to others:
 
 ::: {.quote-table}
 | Zosimas conmence a parler, | Zosimas begins to speak, |
@@ -88,11 +88,11 @@ Although Gaunt, Howie, and Campbell are all engaging with overlapping source mat
 
 ## Cross-Copy Reading & The Difference It Makes
 
-Paying attention to the different manuscripts of T, — with the many alterations in details that they include, elide, and emphasize — allows us to build upon current readings of the French Mary the Egyptian, of her body, her beauty, and her holiness. While much of the existing scholarship on Version T relies on Dembowski’s edition — and thus largely relies on Manuscript A (Paris BnF MS fr. 23112) — this dissertation seeks to enrich the present conversation by engaging more comprehensively with the array of manuscript copies available. The exploration of Version T in this dissertation aims not just to add another voice to the existing scholarship but to reshape the present conversation by foregrounding a greater level of scrutiny to the text across its manuscript witnesses. In doing so, I seek to open up new avenues for reading Mary with fresh eyes. By thoroughly examining the full body of textual evidence available, we may enjoy an increased level of confidence and clarity in our scholarly conclusions.
+Paying attention to the different manuscripts of T — with the many alterations in details that they include, elide, and emphasize — allows us to build upon current readings of the French Mary the Egyptian, of her body, her beauty, and her holiness. While much of the existing scholarship on Version T relies on Dembowski’s edition — and thus largely relies on Manuscript A (Paris BnF MS fr. 23112) — this dissertation seeks to enrich the present conversation by engaging more comprehensively with the array of manuscript copies available. The exploration of Version T in this dissertation aims not just to add another voice to the existing scholarship but to reshape the present conversation by foregrounding a greater level of scrutiny to the text across its manuscript witnesses. In doing so, I seek to open up new avenues for reading Mary with fresh eyes. By thoroughly examining the full body of textual evidence available, we may enjoy an increased level of confidence and clarity in our scholarly conclusions.
 
 To provide a clear example of the benefit of cross-copy reading and the difference it makes in our analyses, I turn to the work of Élisabeth Pinto-Mathieu. In her comparative analysis of the Lives of Mary the Egyptian, Mary Magdalene, and Thaïs, Pinto-Mathieu highlights the challenge of navigating the diverse and evolving hagiographic traditions across languages and centuries.[^34] Pinto-Mathieu seeks textual stability in her article by centering the *Legenda aurea*, arguing that vernacular versions of hagiographic texts tend to be “pures traductions d’une tradition latine souvent plus érudite” (90) anyway, but she does at various points also make use of the many French versions of the Mary the Egyptian *Vie*, including in particular Version T. In the article, Pinto-Mathieu does mention two specific manuscripts of Version T — BnF MS fr. 23112, or T-A, and MS Canonici Misc. 74, or T-B (100n15&16) — but these copies are only referenced specifically in order to indicate T’s placement chronologically in the broader French tradition so that Pinto-Mathieu might use Version T to explore a feature entirely absent from the Latin tradition: the portraits of Mary the Egyptian — one describing her body during her sexually promiscuous phase and one describing her body as an ascetic in the desert.
 
-Pinto-Mathieu makes the argument that Mary’s body (in Version T) is initially beautiful and desirable and sensual and later becomes ugly, frightening, and generally husk-like as a result of her harsh penance — an argument that is commonly repeated in work on Mary the Egyptian, and even specifically in Version T scholarship, without much variation.[^35] She suggests that the presence of the first portrait depicting Mary’s initial beauty is only added by the T-poet so that her later more mysterious figure might appear all the more shocking for the reader: “Le portrait physique ne s’imprègne de la poésie courtoise et érotique à la mode que par jeu littéraire, pour préfigurer un second portrait, celui de la noirceur saisissante” (101).[^36] In support of this argument, she writes that one need only look to a single detail within the portraits to understand the function of these portraits: Mary the Egyptian’s breasts. She points to the use of the word *mameles* (v.177) in the first portrait and the use of the word *traians* (v.643) in the second, suggesting the former is far more sensual than the latter. She writes, “Les ‘mameles,’ terme consacré de l’érotique courtoise, se réduisent à la fonction de ‘traians’; elles ne relèvent plus que de l’anatomie” (103n19). She is suggesting that Mary the Egyptian was once sensual and becomes merely physical, and is certainly physically undesirable, having shed the erotic function of this part of her body. Regardless of which version of the legend one reads — according to Pinto-Mathieu — the message is uncomplicatedly the same: “Qu'elle gomme le portrait, comme le fera Jacques de Voragine, ou bien qu'elle en joue, le travaille et l'exhibe par des procédés d'écriture spéculaire, l'hagiographie des pécheresses repenties du XIII^e^ siècle n'aspire qu'à prôner le renoncement à la chair” (103).
+Pinto-Mathieu makes the argument that Mary’s body (in Version T) is initially beautiful and desirable and sensual and later becomes ugly, frightening, and generally husk-like as a result of her harsh penance — an argument that is commonly repeated in work on Mary the Egyptian, and even specifically in Version T scholarship, without much variation.[^35] She suggests that the presence of the first portrait depicting Mary’s initial beauty is only added by the T-poet so that her later more mysterious figure might appear all the more shocking for the reader: “Le portrait physique ne s’imprègne de la poésie courtoise et érotique à la mode que par jeu littéraire, pour préfigurer un second portrait, celui de la noirceur saisissante” (101).[^36] In support of this argument, she writes that one need only look to a single detail within the portraits to understand the function of these portraits: Mary the Egyptian’s breasts. She points to the use of the word *mameles* (v.177) in the first portrait and the use of the word *traians* (v.643) in the second, suggesting the former is far more sensual than the latter. She writes, “Les ‘mameles,’ terme consacré de l’érotique courtoise, se réduisent à la fonction de ‘traians’; elles ne relèvent plus que de l’anatomie” (103n19). She is suggesting that Mary the Egyptian was once sensual and becomes merely physical, and is certainly physically undesirable, having shed the erotic function of this part of her body. Regardless of which version of the legend one reads — according to Pinto-Mathieu — the message is uncomplicatedly the same: “Qu’elle gomme le portrait, comme le fera Jacques de Voragine, ou bien qu’elle en joue, le travaille et l’exhibe par des procédés d’écriture spéculaire, l’hagiographie des pécheresses repenties du XIII^e^ siècle n’aspire qu’à prôner le renoncement à la chair” (103).
 
 In fact, if we consider the verses describing Mary the Egyptian’s breasts across the extant manuscript copies, the word *mameles* is *only *used in manuscripts T-A and T-B, and manuscript T-B omits the verse that would use *traians* in the second portrait entirely, whereas every other whole copy — the fragments are, unfortunately, missing these passages of the text— uses the term *traians* for *both *portraits.
 
@@ -103,7 +103,7 @@ T-D: “chascun des **traianz** a la dune” (v.175) → “N’aveit plus char 
 T-E: “L’un des **traians** de cele domme” (v.178) → “N’avoit de char en ses **traians**” (v.645)  
 T-L: “Cacune **traiant** de la dome” → “N’avoit plus char en son **traiant**”[^37]  
 T-F^1^: [offers only the first 10.5 verses of Portrait 1]  
-T-F^2^: [both portraits missing]  
+T-F^2^: [both portraits missing] 
 
 When reading across the T corpus, instead of relying solely on one manuscript copy, we can see that this particular argument of Mary’s supposedly degraded beauty may be called into question. How valid is it to say that the once erotic, sensual, sinful Mary the Egyptian is no longer desirable, or even touchable, in her more purified ascetic form if we find a consistent use of *traians* regardless of Mary’s state of being? The difference of a single word in a single manuscript may seem significant, but when examined more closely, it can reveal how seemingly stable arguments rely on incomplete evidence.
 
@@ -143,19 +143,19 @@ Following the conclusion to this dissertation, which addresses some of the unres
 
 The final component of this dissertation — Appendix 2, “Edited Transcriptions” — is an experimental digital edition in which interested readers may explore the entirety of the extant Version T corpus. The format of Appendix 2 seeks to explicitly show readers the mediating hand of the editor in rendering the contents of these eight manuscripts for a modern audience by presenting each T copy with varying levels of editorial intervention, which may be freely navigated by the reader as desired. The inclusion of this appendix is meant to demonstrate to readers the extensive work that has already been done in transcribing and editing the full T corpus, while also acknowledging what remains to be done, namely additional revision and full English translations of every manuscript copy. Where available, links to the digital facsimiles of several T manuscripts (T-A, T-D, T-E, T-F^1^, and T-F^2^) are provided, but future iterations of this project would ideally seek to integrate these digitizations more fully with the aim of further bridging the gap between the medieval source and the modern reader. Together, Chapters 1 and 2 and Appendix 2 articulate a vision of editorial work that is rigorous, continuous, and transparent.
 
-Finally, as the entirety of this dissertation is presented as a digital document authored using the publishing system Quarto — a new open-source publishing system made by developers of the programming language R —, readers may see how the very format of this dissertation is in alignment with its arguments. By adopting a digital format that facilitates the integration of static and dynamic content, this dissertation embodies the push for more digitally forward editions and scholarship and reflects a commitment to leveraging contemporary technology to enhance the accessibility, visualization, and interpretation of medieval texts.
+Finally, as the entirety of this dissertation is presented as a digital document authored using the publishing system Quarto — a new open-source publishing system made by developers of the programming language R — readers may see how the very format of this dissertation is in alignment with its arguments. By adopting a digital format that facilitates the integration of static and dynamic content, this dissertation embodies the push for more digitally forward editions and scholarship and reflects a commitment to leveraging contemporary technology to enhance the accessibility, visualization, and interpretation of medieval texts.
 
 [^1]: [](#ftnt_ref1) Special Collections Manuscript Curator and Archivist at the John Rylands Library Elizabeth Gow kindly supplied me with a pdf scan of this letter via email on August 24th, 2024.
 [^2]: [](#ftnt_ref2) According to Gow, The John Rylands no longer has a microfilm copy of French 6, and Uppsala University is not in possession of such a microfilm or any of Rankka’s papers. Uppsala Special Collections Archivist Ina-Maria Jansson did, however, supply me with Rankka’s obituary, which describes Rankka’s commitment to editing and translating works of medieval French literature into Swedish through the later years of his life (personal correspondence via email 8-13 Aug 2024).
 [^3]: [](#ftnt_ref3) It is possible that Rankka was supplied with this same handlist, but he does not include it in the bibliography of his edition.
-[^4]: [](#ftnt_ref4) “Mais malement fu enseignie” (v.60). Unless otherwise indicated, all quotations of Version T in this dissertation will be taken from manuscript copy T-A (Paris, Bibliothèque nationale de France, Français 23112), which is the base text of Peter Dembowski’s edition of Version T in *La Vie de sainte Marie l’Égyptienne: Versions en ancien et en moyen français* (1977). > The term ‘verse’ is used in this dissertation to refer to the the single metrical unit of poetry, and ‘line’ refers to a single row of text copied within a manuscript. All translations, unless otherwise stated, are my own.
+[^4]: [](#ftnt_ref4) “Mais malement fu enseignie” (v.60). Unless otherwise indicated, all quotations of Version T in this dissertation will be taken from manuscript copy T-A (Paris, Bibliothèque nationale de France, Français 23112), which is the base text of Peter Dembowski’s edition of Version T in *La Vie de sainte Marie l’Égyptienne: Versions en ancien et en moyen français* (1977). The term ‘verse’ is used in this dissertation to refer to the the single metrical unit of poetry, and ‘line’ refers to a single row of text copied within a manuscript. All translations, unless otherwise stated, are my own.
 [^5]: [](#ftnt_ref5) “D’erbe vesqui & de rachines / Xvii. ans. par les gastines / Puis fu .xxx. ans onc ne manga / Se angeles ne li aporta” // “On grass she lived and on roots / for seventeen years in the wilderness. / Then for thirty years, she ate nothing / unless an angel brought it to her.” (vv.681-684)
 [^6]: [](#ftnt_ref6) “Ne ainc en trestot le boscaige / Ne li vint puis beste salvaige / Ne autre vive creature / Par le gaut va toute seure” // “Never in all the wood / did any wild beast come to her thereafter / nor any other living creature. / Through the forest, she goes totally assured.” (vv.695-698)
-[^7]: [](#ftnt_ref7) Version T is one of about a dozen versions in the French tradition alone. The other versions — as described by Dembowski — are X, V, W, N, O, O1, Z, U, Y, L1, L2, L3, and R. Version T is considered one of the earliest of these, dating at least to the late twelfth century according to Alfred T. Baker and confirmed by Dembowski (17). Version X was believed by > Hermann Knust to be the source for T, but Paul Meyer correctly judged — according to Dembowski (17) — the inverse to be the case. Dembowski suggests X was likely written soon after T though probably near start of the thirteenth century (17). Version V, dating to the fifteenth century, likely derives from X as Dembowski notes the two share the unique accusation of incest as being among Mary the Egyptian’s many sins (18). Dembowski dates Version W — a short Anglo-Norman poem likely translated from a Latin source — to the end of the twelfth century, making it a rough contemporary of Version T (18). Dembowski repeats Hilding> Kjellman’s assessment that Version N likely dates to somewhere between 1230 and 1250 based on a linguistic study of the collection of miracles of the Virgin in which N is included (19). Dembowski says that the N poet was likely following a Latin prose source, but he cannot exclude the possibility that the N poet had access to Version T too due to some resemblance between some of their verses (18-19). Version O is the translation of an unidentified Latin version of Sophronius and the primary source of Version R (19). Based on the linguistic evidence, Dembowski would not date Version O any later than 1250. Version O> 1> is a significantly abridged redaction of Version O, which Dembowski chose to feature separately “de ne pas trop encombrer l’appareil critique et ne pas le rendre à peu inutilisable” (20). According to Dembowski, Version Z is contemporary with O but was likely the translation of a simpler, more concise Latin text (20). Version U is of a similar type to O and Z — though less than half the length of O —, dating to the second half of the thirteenth century (20-21). Version Y is about a third of the length of Version O and dates to the mid-fifteenth century (21). Finally, L> 1> , L> 2> , and L> 3> are French translations of the > Golden Legend> of Jacobus de Voragine (21) with L> 1> dating to the end of the thirteenth century (263), L> 2> to the second quarter of the fourteenth century (269), and L> 3> anterior to the fifteenth century (275).
+[^7]: [](#ftnt_ref7) Version T is one of about a dozen versions in the French tradition alone. The other versions — as described by Dembowski — are X, V, W, N, O, O1, Z, U, Y, L1, L2, L3, and R. Version T is considered one of the earliest of these, dating at least to the late twelfth century according to Alfred T. Baker and confirmed by Dembowski (17). Version X was believed by Hermann Knust to be the source for T, but Paul Meyer correctly judged — according to Dembowski (17) — the inverse to be the case. Dembowski suggests X was likely written soon after T though probably near start of the thirteenth century (17). Version V, dating to the fifteenth century, likely derives from X as Dembowski notes the two share the unique accusation of incest as being among Mary the Egyptian’s many sins (18). Dembowski dates Version W — a short Anglo-Norman poem likely translated from a Latin source — to the end of the twelfth century, making it a rough contemporary of Version T (18). Dembowski repeats Hilding Kjellman’s assessment that Version N likely dates to somewhere between 1230 and 1250 based on a linguistic study of the collection of miracles of the Virgin in which N is included (19). Dembowski says that the N poet was likely following a Latin prose source, but he cannot exclude the possibility that the N poet had access to Version T too due to some resemblance between some of their verses (18-19). Version O is the translation of an unidentified Latin version of Sophronius and the primary source of Version R (19). Based on the linguistic evidence, Dembowski would not date Version O any later than 1250. Version O^1^ is a significantly abridged redaction of Version O, which Dembowski chose to feature separately “de ne pas trop encombrer l’appareil critique et ne pas le rendre à peu inutilisable” (20). According to Dembowski, Version Z is contemporary with O but was likely the translation of a simpler, more concise Latin text (20). Version U is of a similar type to O and Z — though less than half the length of O — dating to the second half of the thirteenth century (20-21). Version Y is about a third of the length of Version O and dates to the mid-fifteenth century (21). Finally, L^1^ , L^2^ , and L^3^ are French translations of the *Golden Legend* of Jacobus de Voragine (21) with L^1^ dating to the end of the thirteenth century (263), L^2^ to the second quarter of the fourteenth century (269), and L^3^ anterior to the fifteenth century (275).
 [^8]: [](#ftnt_ref8) Other than Version R, which is of comparable length but is a derivative of T, Version W, which is made up of only 140 lines, and Version N, which consists of 407 lines, all of the other surviving versions in the French tradition are written in prose.
-[^9]: [](#ftnt_ref9) The French versions that are narratively centered on Mary are T, X, V, W, N, and R — all of these apparently deriving structurally from T —, and the versions that are narratively centered on her counterpart Zosimas are O, Z, U, Y, and L.
+[^9]: [](#ftnt_ref9) The French versions that are narratively centered on Mary are T, X, V, W, N, and R — all of these apparently deriving structurally from T — and the versions that are narratively centered on her counterpart Zosimas are O, Z, U, Y, and L.
 [^10]: [](#ftnt_ref10) Simon Gaunt makes it clear that the discrepancy between texts that were most popular among medieval readers and those that are most popular among modern readers is in large part caused by the skewed production of modern editions: “Hagiography is good for medievalists. I do not thereby mean that the texts are necessarily good for their souls (though they may be), but rather that saints’ lives offer a useful corrective to the reading experience of most modern readers of vernacular medieval literature, which is often grounded almost entirely in profane texts. … The profane texts students of Old French and Occitan mostly read represent a tiny proportion of the texts produced in medieval France and Occitania. Even in the vernacular the quantity of religious texts which has survived is far greater than their availability in modern editions suggests and vernacular hagiography was at least as popular as other literary genres, if not more so. Modern views of medieval vernacular writing are skewed by the marginalization of hagiography” (180).
-[^11]: [](#ftnt_ref11) These include > Dawson (2003) & (2005),> Delfin (1989), Foehr-Janssens (2000), Karras (1990), Mariani (2017), Nash (1971), and > Uhlig (2010).
+[^11]: [](#ftnt_ref11) These include Dawson (2003) & (2005), Delfin (1989), Foehr-Janssens (2000), Karras (1990), Mariani (2017), Nash (1971), and Uhlig (2010).
 [^12]: [](#ftnt_ref12) In her article “Rutebeuf’s Contribution to the Saint Mary the Egyptian Legend” (1971), Suzanne Nash likewise describes R as a simplification of T, “The prayer in *T * is far more complicated. Not only does it reveal a feminine mind analysing her own sinfulness, but it is a*tour de force * of persuasive rhetoric” (699n12; Nash’s emphasis). According to Nash’s assessment, the verse of R relies more heavily on poetic devices of repetition to imitate the kinetic experience of Catholic ritual in order to excite a lay audience that “was not especially learned” (697). Thus, Nash supposes that the audience’s experience of R* * becomes more ritualistic than didactic (697). If we follow Nash’s assessment that T is far more literarily complex and didactic than R, then who exactly was the intended readership of T? And what exactly were they meant to glean from its highbrow style and its elevated didacticism? Scholars of Version T have come to somewhat differing conclusions to these questions, which I will discuss further below, but overall, scholarship on T has been predominantly fixated on Mary the Egyptian’s sexuality as the key to approaching the answers.
 [^13]: [](#ftnt_ref13) Emma Campbell recounts how Rutebeuf describes the labor of his rewriting of the saint’s *Vie* as an act of penance in imitation of Mary’s own labors (176).
 [^14]: [](#ftnt_ref14) An English translation of Paul the Deacon’s Latin Life of Saint Mary of Egypt was also published by Benedicta Ward in her *Harlots of the Desert: A Study of Repentance in Early Monastic Sources *(1987), which may have also contributed to the quantity of English language scholarship on the legend in general. The essay collection* The Legend of Mary of Egypt in Medieval Insular Hagiography* (1996) and several other pieces (Chase [1986], Heron [2000], Karras [1996], Lees & Overing [2001] Magennis [1985], and Scheil [2000]) on the topic of the insular tradition predate the Magennis edition, but appearing after the Magennis edition, we have seven more articles concerning the Old English verse: Black (2011) & (2017), Blud (2017), Cotter-Lynch (2021), Maslanka (2013), Szarmach (2013), and Watt & Lees (2011).
