Aligned Figs 2.1 and 2.2 to center and made width 100%; Added figures 3.1-3.5 to Chapter 3; Added ch3 figures to figures list and adjusted spacing of grid list

--- a/chapter2-1.qmd
+++ b/chapter2-1.qmd
@@ -28,7 +28,7 @@ In preparation for the digital edition begun in this dissertation — both the e
 
 Prior to diving into the XML encoding though, I first transcribed each manuscript of Version T — working from both the digitized images of the manuscripts and my own collected images — into a basic Google Sheet,^[Google Sheets is simply a web-based spreadsheet program that allows users to create, edit, and share spreadsheets online. It is part of the Google suite of programs.] with each verse occupying its own cell.^[Similarly, the *Roman de la Rose Digital Library (Rose DL)* uses linked Google Sheets to organize and share the collection’s manuscript metadata. There are advantages to this practice such as the ease with which users may access and download this data without requiring any proficiency in coding or other technical skills, but there are also some limitations to this strategy. It is unclear, for example, who exactly populated these sheets with data and when the information was last updated as the Version History function of the spreadsheets is not currently available to the public. But the *Rose DL* does acknowledge the dynamic nature of this data, “This spreadsheet is a work in progress and will be subject to change” (“Extant Manuscripts”).] This early stage served as a no-code method that organized the texts in a manipulatable, shareable format, and by adding color coding to this spreadsheet to highlight the major narrative scenes as they appear across the manuscript copies, I was able to quickly recognize key areas of interest and direct the focus of my subsequent research:
 
-![Figure 2.1: Screengrab of Google Sheet containing side-by-side transcriptions of Version T copies. The cells highlighted in orange indicate the verses of Portrait 2, and the uneven shading was roughly applied to begin tracing variation in this passage across the copies.](images/Fig2.01_GoogleSheets_color_viz.png)
+![Figure 2.1: Screengrab of Google Sheet containing side-by-side transcriptions of Version T copies. The cells highlighted in orange indicate the verses of Portrait 2, and the uneven shading was roughly applied to begin tracing variation in this passage across the copies.](images/Fig2.01_GoogleSheets_color_viz.png){width=100% fig-align="center"}
 
 Laying out all of the T copies this way side by side made it easy to visualize how these copies differ from each other in key places, and even by merely scrolling to the bottom of the spreadsheet, one could obviously see how dramatically these copies differ in length and therefore in content.^[T-A, which is the base text of Dembowski’s edition, offers 1,526 verses; T-B is the shortest complete copy with only 1,327 verses; T-C includes 1,532 verses; T-D has 1,442; T-E has 1,488 legible verses, but T-E would be the longest copy were it not for the loss of some sixty verses due to cutting; T-L has approximately 1,350 verses; Fragmentary copy T-F^1^ includes the first 163.5 verses of the text; and fragment T-F^2^ includes only 38 verses.] This colorized spreadsheet served as the eventual design inspiration for the current presentation of the T portraits in this dissertation (Chapter 2, Part 2), with all of the copies arranged in parallel and with the addition of color highlighting to draw attention to the areas of interest discussed in the close reading in Chapter 3.
 
@@ -36,7 +36,7 @@ The transcription spreadsheet not only served as an initial organizational tool 
 
 Despite all this careful attention, Appendix 2 should be considered a good but faulty draft until eyes fresher than my own have reviewed its accuracy. In the meantime though, this material has already served as a useful laboratory for working out the fundamental strategies of this project and future iterations of this project as well as provide substantial material to probe for further literary research.
 
-![Figure 2.2: Screengrab of digital transcription file T-D.xml in Oxygen XML Editor. The text of copy T-D appears in white; the markup tags are blue; tag attributes are red; and special characters — here, `&amp;` indicates the presence of an ‘et’ symbol using an  ampersand — are yellow.](images/Fig2.02_Oxygen_T-D_XML.png)
+![Figure 2.2: Screengrab of digital transcription file T-D.xml in Oxygen XML Editor. The text of copy T-D appears in white; the markup tags are blue; tag attributes are red; and special characters — here, `&amp;` indicates the presence of an ‘et’ symbol using an  ampersand — are yellow.](images/Fig2.02_Oxygen_T-D_XML.png){width=100% fig-align="center"}
 
 Transcribing each copy of Version T has presented unique challenges, and encoding each copy has required thousands of individual judgment calls.^[When determining the best course of action for particularly challenging verses, I often consulted Dembowski’s edition. If, for example, Dembowski provides a specific recommendation for how to expand an abbreviation or establish word separation in his paratextual notes, then I typically follow his lead. (In future iterations of this project, I will review these decisions.) If, however, he does not supply the verse in his variance notes — something he typically does not do if the verse only differs in terms of its dialect or spelling — then I consider the contextual evidence available elsewhere in the copy to determine the best choice. Because the digital edition of Appendix 2 displays a spectrum of editorial intervention, each of these decisions may be recognized by the reader verse by verse without requiring cross-referencing other paratextual notes.] Now, each copy of Version T is both human *and* machine-readable with the addition of the following tags:
 
