--- a/figures.qmd
+++ b/figures.qmd
@@ -48,6 +48,16 @@ format: html
 +---------------+---------------------------------------------------------------------------------------------------------------------+
 | Figure 2.20   | Paris, BnF Arsenal, 3516, f.115va, line 22/50 (T-E v.672). Detail                                                   |
 +---------------+---------------------------------------------------------------------------------------------------------------------+
+| Figure 3.1    | Oxford, Corpus Christi College, 232, f.38r, line 17/26 (T-C v.159). Detail                                          |
++---------------+---------------------------------------------------------------------------------------------------------------------+
+| Figure 3.2    | Paris, BnF, Français 19525, f.16rb, line 27/32 (T-D v.155) Detail                                                   |
++---------------+---------------------------------------------------------------------------------------------------------------------+
+| Figure 3.3    | Manchester, John Rylands Library, French 6, f.8vb, line 35/41 (T-F1 v.155) Detail                                   |
++---------------+---------------------------------------------------------------------------------------------------------------------+
+| Figure 3.4    | Paris, BnF, Français 23112, f.335va, line 16/40 (T-A v.149) Detail                                                  |
++---------------+---------------------------------------------------------------------------------------------------------------------+
+| Figure 3.5    | Paris, BnF Arsenal, 3516, f.114rb, line 9/50 (T-E v.109) Detail                                                     |
++---------------+---------------------------------------------------------------------------------------------------------------------+
 
-: {.hover tbl-colwidths="[35,65]"}
+: {.hover tbl-colwidths="[25,75]"}
 
